# podvoice

./: .gitignore  README.md  bootstrap.ps1  bootstrap.sh  constraints.in  pyproject.toml
.github/instructions/: podvoice-principles.instructions.md
examples/: podcastprep.md
podvoice/: audio.py  chunking.py  cli.py  daemon.py  guardrails.py  parser.py  tts.py  utils.py
tests/: test_cache_key.py  test_chunking.py  test_cli_playback_modes.py  test_cpu_tuning.py  test_daemon.py  test_device_selection.py  test_export_quality.py  test_guardrails.py  test_normalization.py  test_parser_merge.py  test_stream_prebuffer.py
